MVP complete: - Improve translation - Create initial homepage layout

--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -1,10 +1,10 @@
-$primary: #3061aa;
-$primary-dark: #00387a;
+$primary: #f7c113;
+$primary-dark: #d68306;
 $primary-light: #678edc;
-$secondary: white;
+$secondary: #000;
 $secondary-dark: white;
 $secondary-light: white;
-$background: #d7e9f8;
+$background: #000;
 $surface: #f5f5f6;
 $link: rgb(116, 12, 12);
 $on-primary: #fff;
@@ -14,3 +14,4 @@ $on-surface: #000;
 $on-error: #000;
 $font-size: 16px;
 $font-size-big: 20px;
+$font-size-bigger: 32px;
