--- a/fe/src/components/main/Home/Home.scss
+++ b/fe/src/components/main/Home/Home.scss
@@ -1,14 +1,16 @@
 @import "../../../styles/_variables";
 
 .container {
+    min-height: 89vh;
+    height: 89vh;
     width: 100%;
+    background-image: url("/images/thorn-vertical-large.png");
+    background-repeat: repeat-y;
 
     section {
         width: 75%;
         min-height: 100%;
         height: 100%;
-        background-image: url("/images/thorn-vertical-large.png");
-        background-repeat: repeat-y;
     }
 
     aside {
@@ -24,11 +26,23 @@
 
 @media screen and (max-width: $media-width-medium) {
     .container {
+        min-height: 87vh;
+        height: 87vh;
+        background-image: url("/images/thorn-vertical-small.png");
+
         aside,
         section {
             width: 100%;
-            height: unset;
-            min-height: unset;
+        }
+
+        section {
+            height: 70%;
+            min-height: 70%;
+        }
+
+        aside {
+            height: 30%;
+            min-height: 30%;
         }
     }
 }
