--- a/fe/src/index.ejs
+++ b/fe/src/index.ejs
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Narok.io" />
     <meta property="og:description" content="Web-Security and hacking..." />
-    <meta property="og:image" content="/images/demon-logo.png" />
+    <meta property="og:image" content="https://narok.io/images/demon-logo.png" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Narok.io</title>
 </head>
