--- a/fe/src/styles/_main.scss
+++ b/fe/src/styles/_main.scss
@@ -1,4 +1,5 @@
-@import "./variables";
+@import './variables';
+@import './fonts';
 
 * {
     padding: 0;
@@ -9,17 +10,5 @@ html {
     color: $primary;
     background-color: $background;
     font-size: $font-size;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-h1 {
-    color: $primary-dark;
-}
-
-h1:first-child {
-    padding: 5px;
-}
-
-pre {
-    color: $on-secondary;
+    font-family: $font-family;
 }
