--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -14,6 +14,8 @@ $on-secondary: #454545;
 $on-background: #000;
 $on-surface: #000;
 $on-error: #000;
+$font-family: Arial, Helvetica, sans-serif;
+$font-family-blog: Hack, Arial, Helvetica, sans-serif;
 $font-size: 16px;
 $font-size-big: 20px;
 $font-size-bigger: 32px;
