--- a/fe/src/components/main/Home/Home.scss
+++ b/fe/src/components/main/Home/Home.scss
@@ -5,21 +5,21 @@
     width: 100%;
     background-image: url("/images/thorn-vertical-large.png");
     background-repeat: repeat-y;
+    display: flex;
 
     section {
-        width: 75%;
+        flex: 75%;
         min-height: 100%;
         height: 100%;
     }
 
     aside {
-        vertical-align: top;
-        width: 25%;
+        flex: 25%;
     }
 
     section,
     aside {
-        display: inline-block;
+        display: flex;
     }
 }
 
