--- a/fe/src/components/main/Footer/Footer.scss
+++ b/fe/src/components/main/Footer/Footer.scss
@@ -2,7 +2,7 @@
 
 footer {
     width: 100%;
-    color: $secondary;
+    color: $on-primary;
     background-color: $primary-dark;
     min-height: 3vh;
     height: 3vh;
