--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -19,5 +19,5 @@ $font-family-blog: Hack, Arial, Helvetica, sans-serif;
 $font-size: 16px;
 $font-size-big: 20px;
 $font-size-bigger: 32px;
-$media-width-large: 1024px;
-$media-width-medium: 768px;
+$media-width-small: 500px;
+$media-width-medium: 900px;
