--- a/fe/src/components/main/Header/Header.scss
+++ b/fe/src/components/main/Header/Header.scss
@@ -1,8 +1,8 @@
 @import "../../../styles/_variables";
 
 header {
-    min-height: 8vh;
-    height: 8vh;
+    min-height: 9vh;
+    height: 9vh;
     background-image: linear-gradient(to bottom, $background, $background-light);
 
     img {
@@ -28,6 +28,34 @@ header {
         background-color: $background;
         color: $primary;
         border: solid 1px $primary;
+    }
+
+    .google-button {
+        float: right;
+        margin: 10px;
+    }
+
+    .signed-in {
+        &_true {
+            background-color: $primary-dark;
+            color: $on-primary;
+        }
+        &_false {
+            background-color: $on-primary;
+        }
+    }
+}
+
+@media screen and (max-width: $media-width-medium) {
+    header {
+        select {
+            margin: 0;
+        }
+
+        .google-button {
+            margin: 1px 2px 0 0;
+            padding: 5px;
+        }
     }
 }
 
