--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $surface: #f5f5f5;
 $link: rgb(116, 12, 12);
 $on-primary: #fff;
 $on-secondary: #454545;
-$on-background: #000;
+$on-background: #f5f5f5;
 $on-surface: #000;
 $on-error: #000;
 $font-family: Arial, Helvetica, sans-serif;
