--- a/fe/src/components/blog/BlogArticle.scss
+++ b/fe/src/components/blog/BlogArticle.scss
@@ -19,10 +19,11 @@
                 align-self: flex-end;
             }
 
-            &__owner {
+            &__ender {
                 grid-column: span 2;
                 margin-left: auto;
                 align-self: flex-end;
+                margin-top: 3px;
             }
 
             &__content {
