--- a/fe/src/components/main/Header/Header.scss
+++ b/fe/src/components/main/Header/Header.scss
@@ -30,7 +30,7 @@ header {
         border: solid 1px $primary;
     }
 
-    .google-button {
+    .signin-button {
         float: right;
         margin: 10px;
     }
@@ -52,7 +52,7 @@ header {
             margin: 0;
         }
 
-        .google-button {
+        .signin-button {
             margin: 1px 2px 0 0;
             padding: 5px;
         }
