Add article page

--- a/fe/src/components/blog/BlogPage.scss
+++ b/fe/src/components/blog/BlogPage.scss
@@ -4,7 +4,7 @@
     section {
         padding-top: 10px;
 
-        article {
+        article, .link-back {
             margin-left: 150px;
         }
     }
