--- a/fe/src/components/blog/BlogArticle.scss
+++ b/fe/src/components/blog/BlogArticle.scss
@@ -33,8 +33,15 @@
             &__content {
                 padding-top: 10px;
                 grid-column: span 2;
-                text-align: justify;
                 text-indent: 40px;
+                display: inline-block;
+                
+                &-editing {
+                    color: $primary;
+                    background: $background;
+                    padding: 10px;
+                    margin-top: 5px;
+                }
             }
 
             &__image {
