--- a/fe/src/components/blog/BlogArticle.scss
+++ b/fe/src/components/blog/BlogArticle.scss
@@ -18,6 +18,10 @@
                 margin-left: auto;
                 align-self: flex-end;
             }
+            
+            &__message {
+                grid-column: span 2;
+            }
 
             &__ender {
                 grid-column: span 2;
@@ -29,8 +33,15 @@
             &__content {
                 padding-top: 10px;
                 grid-column: span 2;
-                text-align: justify;
                 text-indent: 40px;
+                display: inline-block;
+                
+                &-editing {
+                    color: $primary;
+                    background: $background;
+                    padding: 10px;
+                    margin-top: 5px;
+                }
             }
 
             &__image {
