Make title editable

--- a/fe/src/styles/_fonts.scss
+++ b/fe/src/styles/_fonts.scss
@@ -79,6 +79,10 @@ i.fab {
     content: "\f033";
 }
 
+.fa-strike:before {
+    content: "\f0cc";
+}
+
 .fa-decrease:before {
     content: "\f031\f103";
 }
