Fix unit tests and code coverage

--- a/fe/src/components/blog/Article.scss
+++ b/fe/src/components/blog/Article.scss
@@ -13,6 +13,11 @@
         }
 
         .article {
+            &__title {
+                padding: 5px;
+                font-size: $font-size-big;
+            }
+
             &__created {
                 grid-column: span 1;
                 margin-left: auto;
