--- a/fe/src/components/main/Side/SidePanel.scss
+++ b/fe/src/components/main/Side/SidePanel.scss
@@ -12,7 +12,7 @@
             }
         }
 
-        span:first-of-type {
+        span:nth-of-type(2) {
             flex-grow: 1;
         }
     }
