--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -7,6 +7,8 @@ $secondary-light: lighten($secondary, 5%);
 $background: rgb(16, 0, 0);
 $background-dark: darken($background, 5%);
 $background-light: lighten($background, 5%);
+$background-code: rgb(247, 247, 247);
+$border-code: rgb(205, 205, 205);
 $surface: #f5f5f5;
 $link: rgb(116, 12, 12);
 $on-primary: #fff;
