Add block in editor
- Add support for &lt;pre&gt; insertion

--- a/fe/src/components/blog/Article.scss
+++ b/fe/src/components/blog/Article.scss
@@ -19,6 +19,7 @@
             hyphens: none;
             tab-size: 4;
             overflow-wrap: break-word;
+            color: $secondary-dark;
             background-color: $background-code;
             border: 1px solid $border-code;
             border-radius: 2px;
