--- a/fe/src/components/blog/Article.scss
+++ b/fe/src/components/blog/Article.scss
@@ -13,6 +13,7 @@
         }
 
         pre {
+            display: inline-block;
             padding: 5px;
             margin-bottom: 5px;
             box-sizing: inherit;
