--- a/fe/src/components/blog/Article.scss
+++ b/fe/src/components/blog/Article.scss
@@ -15,7 +15,7 @@
         pre {
             display: inline-block;
             padding: 5px;
-            margin-bottom: 5px;
+            margin: 5px 0;
             box-sizing: inherit;
             hyphens: none;
             tab-size: 4;
