Update CSS to be lighter.

--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $primary-light: lighten($primary, 5%);
 $secondary: #000;
 $secondary-dark: darken($secondary, 5%);
 $secondary-light: lighten($secondary, 5%);
-$background: rgb(16, 0, 0);
+$background: #FFF;
 $background-dark: darken($background, 5%);
 $background-light: lighten($background, 5%);
 $background-code: rgb(247, 247, 247);
