--- a/fe/src/components/blog/EditableBlogContent.scss
+++ b/fe/src/components/blog/EditableBlogContent.scss
@@ -8,6 +8,8 @@
       background: $background;
       padding: 10px;
       margin-top: 5px;
+      border: 1px solid $secondary;
+      border-radius: 5px;
     }
   }
 }
