--- a/fe/src/styles/_variables.scss
+++ b/fe/src/styles/_variables.scss
@@ -4,16 +4,16 @@ $primary-light: lighten($primary, 5%);
 $secondary: #000;
 $secondary-dark: darken($secondary, 5%);
 $secondary-light: lighten($secondary, 5%);
-$background: #FFF;
+$background: #F5F5F5;
 $background-dark: darken($background, 5%);
 $background-light: lighten($background, 5%);
 $background-code: rgb(247, 247, 247);
 $border-code: rgb(205, 205, 205);
-$surface: #f5f5f5;
+$surface: #0F0F0F;
 $link: rgb(116, 12, 12);
 $on-primary: #fff;
 $on-secondary: #454545;
-$on-background: #f5f5f5;
+$on-background: #0A0A0A;
 $on-surface: #000;
 $on-error: #000;
 $font-family: Arial, Helvetica, sans-serif;
